<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_normal_background"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@drawable/bg_tabbar"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/cl_normal_white"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/my_score_text"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:paddingLeft="18dip"
                android:gravity="left|center"
                android:textSize="16sp"
                android:textColor="@color/cl_normal_black"
                android:background="@drawable/bar_bg_single_change"
                android:text="@string/my_score" />

            <RelativeLayout
                android:id="@+id/get_score_layout"
                style="@style/bar_with_statue_single_style"
                >

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:text="@string/get_score" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/offline_cache_layout"
                style="@style/bar_with_statue_up_style"
                android:layout_marginTop="16dip" >

                <ImageView
                    android:id="@+id/offline_cache_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:src="@drawable/pf_download" />

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:layout_toRightOf="@+id/offline_cache_image"
                    android:text="@string/offline_cache" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/play_history_layout"
                style="@style/bar_with_statue_middle_style" >

                <ImageView
                    android:id="@+id/play_history_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:src="@drawable/pf_history" />

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:layout_toRightOf="@+id/play_history_image"
                    android:text="@string/play_history" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personal_collection_layout"
                style="@style/bar_with_statue_down_style" >

                <ImageView
                    android:id="@+id/personal_collection_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:src="@drawable/pf_collection" />

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:layout_toRightOf="@+id/personal_collection_image"
                    android:text="@string/personal_collection" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/clear_cache_layout"
                style="@style/bar_with_statue_single_style"
                android:layout_marginTop="16dip" >

                <TextView
                    style="@style/text_with_statue_title"
                    android:text="@string/clear_cache_image" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cache_only_wifi_layout"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@drawable/bar_single"
                android:paddingLeft="12dip"
                android:paddingRight="12dip" >

                <TextView
                    style="@style/text_with_statue_title"
                    android:text="@string/cache_only_wifi" />

                <CheckBox
                    android:id="@+id/cache_only_wifi_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feedback_layout"
                style="@style/bar_with_statue_single_style"
                android:layout_marginTop="16dip" >

                <ImageView
                    android:id="@+id/feedback_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:src="@drawable/pf_feedback" />

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:layout_toRightOf="@+id/feedback_image"
                    android:text="@string/feedback" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/check_update_layout"
                style="@style/bar_with_statue_single_style"
                android:layout_marginTop="16dip" >

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:text="@string/check_update" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/copyright_layout"
                style="@style/bar_with_statue_single_style"
                android:layout_marginTop="16dip" >

                <TextView
                    style="@style/text_with_statue_title"
                    android:layout_marginLeft="6dip"
                    android:text="@string/copyright" />

                <Button style="@style/btn_arrow_style" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>